Moved demo files into a seprate folder, and generated a new angular project

--- a/demo files/index.html
+++ b/demo files/index.html
@@ -5,11 +5,11 @@
     <title>Web Audio and Three.Js test</title>
     <meta name="description" content="Audio basics demo for Web Audio API">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <audio id= "audio_file" src="tnt.m4a" crossorigin="anonymous" ></audio>
+    <audio id= "audio_file" src="../tnt.m4a" crossorigin="anonymous" ></audio>
 </head>
 <body>
-    <script src="node_modules/three/build/three.js"></script>
-    <script src="node_modules/simplex-noise/simplex-noise.js"></script>
+    <script src="../node_modules/three/build/three.js"></script>
+    <script src="../node_modules/simplex-noise/simplex-noise.js"></script>
     <button id="play_button" data-playing="false" class="tape-controls-play" role="switch" aria-checked="false">
         <span>Play/Pause</span>
     </button>
@@ -21,6 +21,7 @@
     </datalist>
     <label for="volume_button">VOL</label>
     <script src="webAudio.js"> </script>
+<!--    <script src="microphone_test.js"></script>-->
     <script src="three_visuals.js"></script>
 <!--    <script src="code_from_online.js"></script>-->
 
